[fix]todolist-partial

--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -1,51 +1,39 @@
-
-	<div class="col-md-7">
+<!--カレントユーザーのみアクセスできるように-->
+<div class="row">
+	<div class="col-md-4">
 		<!--todolistフォーム-->
 		<div class="form-set">
-			<h3>Todo リスト</h3>
-			<table class="table-hover">
-				<thead>
-					<th colspan="1">本日のリスト</th>
-				</thead>
-				<tbody>
-				<!--each_with_indexは回したときにそれぞれの要素が何番目か返してくれるメソッド-->
-					<% @todolists.each_with_index do |todolist, i| %>
-					<tr>
-						<th><%= "No. #{i + 1}" %></th>
-						<td><%= todolist.content %></td>
-					<% end %>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-
-
-		<!--todolistの作成については、current_userのみに表示されるように設定する必要があり-->
-		<% if user_signed_in? %>
-		<div class="form-set">
-			<div class="todolist-form">
+			<div class="todolt-form">
 				<h4>Todoリスト作成</h4>
-				<%= form_with model: [:public, @todolist], local: true do |f| %>
-				  <%= render 'shared/error_messages', obj: @todolist %>
-					<div class="form-group">
-						<%= f.label :内容 %>
-						<%= f.text_field :content %>
-					</div>
-					<div class="form-group">
-						<%= f.label :ラジオボタン %>
-						<%#= f.text_field :name %>
-					</div>
-					<div class="actions">
-						<%= f.submit '作成' %>
-					</div>
-
-				<% end %>
+				<!--todolist新規作成フォーム-->
+				<%= render 'public/todolists/form', todolist: @todolist, obj: @todolist %>
 			</div>
 		</div>
-		<% end %>
+	</div>
 
-
-
+	<div class="col-md-8">
+		<div class="form-set">
+			<h3>Todo リスト</h3>
+			<div class="text-right">
+				<%= link_to 'マイページ', public_user_path(current_user.id), class: 'btn btn-outline-primary', style: 'border-radius:50%' %>
+			</div>
+			<%= form_with(model: @finish_list, url: public_todolists_complete_path, local: true) do |f| %>
+			<table class="table-hover">
+				<thead>
+					<th>本日のリスト一覧</th>
+					<th></th>
+					<th></th>
+					<th></th>
+					<th></th>
+				</thead>
+				<tbody>
+					<%= render 'public/todolists/index', todolists: @todolists, todolist: @todolist, f: f %>
+				</tbody>
+			</table>
+			<%= f.submit '完了報告', class: 'btn btn-outline-success' %>
+			<% end %>
+		</div>
+	</div>
 </div>
 
 
