--- a/app/views/public/todolists/edit.html.erb
+++ b/app/views/public/todolists/edit.html.erb
@@ -1,26 +1,12 @@
 <div class="row">
 	<div class="col-md-5">
+		<div class="form-set">
 
 		<%= render 'public/todolists/form', todolist: @todolist, obj: @todolist %>
 
-<!-- 		<%#= form_with model: [:public, @todolist], local: true do |f| %>
-		　　<%#= render 'shared/error_messages', obj: @todolist %>
-			<div class="form-group">
-				<%#= f.text_field :content %>
-			</div>
-			<div class="form-group">
-
-			</div>
-
-		    <div class="actions">
-		    	<%#= f.submit '保存する' %>
-			</div>
-
-
-
-		<#% end %> -->
 		</div>
 	</div>
+</div>
 
 
 <%= link_to '削除する', public_todolist_path(@todolist),method: :delete, data: { confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
