[add]todolists-index/view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 @import "board";
 @import "board_comment";
 @import "tag";
+@import "todolist";
 
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
