--- a/app/views/manage/users/show.html.erb
+++ b/app/views/manage/users/show.html.erb
@@ -9,7 +9,7 @@
 	<h3>会員情報</h3>
 	<div class="form-set">
 
-		<table class="table table-hover">
+		<table class="table table-hover table-responsive">
 				<tr>
 					<th>ユーザー名</th>
 					<td><%= attachment_image_tag(@user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '60x60') %></td>
