--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -9,7 +9,7 @@
 	<div class="col-md-4">
 		<div class="form-set">
 			<h4>プロフィール</h4>
-			<table class="table">
+			<table class="table table-responsive">
 				<tr>
 					<th>名前</th>
 					<td><%= @user.name %></td>
