--- a/app/views/manage/tags/_index.html.erb
+++ b/app/views/manage/tags/_index.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-hover">
+<table class="table table-hover table-responsive">
 	<thead class="thead">
 		<th>タグID</th>
 		<th>タグ名</th>
