--- a/app/views/manage/tags/index.html.erb
+++ b/app/views/manage/tags/index.html.erb
@@ -17,7 +17,7 @@
 		<h3>タグ一覧</h3>
 		<div class="form-set">
 			<%#= render 'index', tags: @tags, obj: @tag %>
-			<table class="table table-hover">
+			<table class="table table-hover table-responsive">
 				<thead class="thead">
 					<th>タグID</th>
 					<th>タグ名</th>
