--- a/app/views/manage/users/index.html.erb
+++ b/app/views/manage/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="form-set">
-	<table class="table table-hover">
+	<table class="table table-hove table-responsive">
 		<thead class="thead">
 			<tr>
 				<th>会員NO.</th>
