--- a/app/views/public/todolists/_form.html.erb
+++ b/app/views/public/todolists/_form.html.erb
@@ -7,8 +7,14 @@
 		<%= f.text_field :content %>
 	</div>
 	<div class="form-group">
-		<%= f.label :ラジオボタン %>
-		<%#= f.text_field :name %>
+		<%= f.radio_button :time_category, :today, checked: true %>
+		<%= f.label :本日, class: 'time_category' %>
+
+		<%= f.radio_button :time_category, :week %>
+		<%= f.label :今週, class: 'time_category' %>
+
+		<%= f.radio_button :time_category, :month %>
+		<%= f.label :今月, class: 'time_category' %>
 	</div>
 	<div class="actions">
 		<%= f.submit '保存する', class: 'btn btn-outline-info' %>
@@ -16,3 +22,5 @@
 
 	<% end %>
 </div>
+
+
