--- a/app/views/public/todolists/edit.html.erb
+++ b/app/views/public/todolists/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="col-md-5">
 		<div class="form-set">
+		<h4>To doリスト編集</h4>
 
 		<%= render 'public/todolists/form', todolist: @todolist, obj: @todolist %>
 
