--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -1,39 +1,69 @@
 <!--カレントユーザーのみアクセスできるように-->
+<!--ここの部分は工程が多くなるので、余裕があれば、細かくやる程度で-->
 <div class="row">
-	<div class="col-md-4">
-		<!--todolistフォーム-->
+	<div class="col-md-5">
 		<div class="form-set">
-			<div class="todolt-form">
-				<h4>Todoリスト作成</h4>
-				<!--todolist新規作成フォーム-->
-				<%= render 'public/todolists/form', todolist: @todolist, obj: @todolist %>
-			</div>
+			<h4>今週のTo do</h4>
+			<%= render 'public/todolists/index', todolists: @todolists %>
 		</div>
+		<div class="form-set">
+			<h4>今月のTo do</h4>
+			<%= render 'public/todolists/index', todolists: @todolists, todolist: @todolist %>
+		</div>
+<!---------ここまで------------------------------->
+
 	</div>
 
-	<div class="col-md-8">
+
+
+	<!--ラジオボタンが１の場合==本日のリスト一覧-->
+	<div class="col-md-7">
+
 		<div class="form-set">
 			<h3>Todo リスト</h3>
 			<div class="text-right">
-				<%= link_to 'マイページ', public_user_path(current_user.id), class: 'btn btn-outline-primary', style: 'border-radius:50%' %>
+				<%= link_to 'リセット(マイペ)', public_user_path(current_user.id), class: 'btn btn-outline-primary', style: 'border-radius:50%' %>
 			</div>
+
 			<%= form_with(model: @finish_list, url: public_todolists_complete_path, local: true) do |f| %>
-			<table class="table-hover">
+			<table class="table-hover table-responsive">
 				<thead>
-					<th>本日のリスト一覧</th>
+					<th colspan="3">本日のリスト一覧</th>
 					<th></th>
 					<th></th>
 					<th></th>
 					<th></th>
 				</thead>
 				<tbody>
-					<%= render 'public/todolists/index', todolists: @todolists, todolist: @todolist, f: f %>
+					<%#= render 'public/todolists/index', todolists: @todolists, todolist: @todolist, f: f %>
+					<% @todolists.each_with_index do |todolist, i| %>
+					<tr>
+						<th><%= "#{i + 1}: " %></th>
+						<td><%= todolist.content %></td>
+						<!--check_box-->
+						<td style="width:13%"><%= f.check_box :content %></td>
+						<td>
+							<%= link_to edit_public_todolist_path(todolist), class: 'btn btn-outline-success', style: 'border-radius: 30%' do %>
+								<i class="fas fa-cogs"></i>
+							<% end %>
+						</td>
+					</tr>
+					<% end %>
 				</tbody>
 			</table>
 			<%= f.submit '完了報告', class: 'btn btn-outline-success' %>
 			<% end %>
 		</div>
+		<!--todolistフォーム-->
+		<div class="form-set">
+			<div class="todolt-form">
+				<h4>To doリスト作成</h4>
+				<!--todolist新規作成フォーム-->
+				<%= render 'public/todolists/form', todolist: @todolist, obj: @todolist %>
+			</div>
+		</div>
 	</div>
+
 </div>
 
 
