--- a/app/views/public/todolists/new.html.erb
+++ b/app/views/public/todolists/new.html.erb
@@ -9,7 +9,7 @@
 			<div class="text-right">
 				<%= link_to 'マイプロフィール', public_user_path(current_user.id), class: 'btn btn-outline-success' %>
 			</div>
-			<table class="table-hover">
+			<table class="table-hover table-responsive">
 				<thead>
 					<th colspan="1">リスト一覧</th>
 				</thead>
