--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -7,7 +7,7 @@ todolist
 	<div class="col-md-6 offset-md-3">
 		<div class="form">
 			<h4>ユーザーランキング</h4>
-			<table class="table">
+			<table class="table table-responsive">
 				<tr>
 					<th>名前</th>
 					<td><%#= @user.name %></td>
