[fix]board-destroy/redirect_back

--- a/app/views/public/boards/index.html.erb
+++ b/app/views/public/boards/index.html.erb
@@ -22,7 +22,7 @@
 </div>
 
 
-<table class="table table-hover table-responsive">
+<table class="table table-hover">
 	<thead>
 		<th>画像</th>
 		<th>ユーザー名</th>
