--- a/app/views/public/todolists/_index.html.erb
+++ b/app/views/public/todolists/_index.html.erb
@@ -4,7 +4,7 @@
 	<tbody>
 		<!--each_with_indexは回したときにそれぞれの要素が何番目か返してくれるメソッド-->
 		<!--2番と３番のみ呼び出す-->
-		<%# if radio_button == '2' %>
+		<%# if radio_button ==  %>
 		<% todolists.each_with_index do |todolist, i| %>
 		<div class="time_category_lists">
 		<tr>
