--- a/app/views/public/todolists/_form.html.erb
+++ b/app/views/public/todolists/_form.html.erb
@@ -1,25 +1,23 @@
 <div class="todolist-form">
-
 	<%= form_with model: [:public, todolist], local: true do |f| %>
-	<%= render 'shared/error_messages', obj: todolist %>
-	<div class="form-group">
-		<%= f.label :内容 %>
-		<%= f.text_field :content %>
-	</div>
-	<div class="form-group">
-		<%= f.radio_button :time_category, :today, checked: true %>
-		<%= f.label :本日, class: 'time_category' %>
+		<%= render 'shared/error_messages', obj: todolist %>
+		<div class="form-group">
+			<%= f.label :内容 %>
+			<%= f.text_field :content, class: 'form-control' %>
+		</div>
+		<div class="form-group">
+			<%= f.radio_button :time_category, :today, checked: true %>
+			<%= f.label :本日, class: 'time_category' %>
 
-		<%= f.radio_button :time_category, :week %>
-		<%= f.label :今週, class: 'time_category' %>
+			<%= f.radio_button :time_category, :week %>
+			<%= f.label :今週, class: 'time_category' %>
 
-		<%= f.radio_button :time_category, :month %>
-		<%= f.label :今月, class: 'time_category' %>
-	</div>
-	<div class="actions">
-		<%= f.submit '保存する', class: 'btn btn-outline-info' %>
-	</div>
-
+			<%= f.radio_button :time_category, :month %>
+			<%= f.label :今月, class: 'time_category' %>
+		</div>
+		<div class="action">
+			<%= f.submit '保存する', class: 'btn btn-outline-info' %>
+		</div>
 	<% end %>
 </div>
 
