--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,6 +1,6 @@
 <% if obj.errors.any? %>
   <div class="alert alert-danger" role="alert">
-    <!-- <div id="error_explanation"> -->
+    <div id="error_explanation">
       <strong><%= pluralize(obj.errors.count, "error") %> prohibited this obj from being saved:</strong>
 
       <ul>
