--- a/app/views/public/boards/show.html.erb
+++ b/app/views/public/boards/show.html.erb
@@ -40,8 +40,6 @@
   <div class="form-set">
     <div class="comment-heading">
       <h4>コメント一覧</h4>
-      <!--namespaceを使用していることを忘れずに-->
-      <!--one_commentと定義して試した-->
       <%= render 'public/board_comments/comments', board_comments: @board_comments, board_comment: @board_comment %>
     </div>
   </div>
@@ -50,23 +48,19 @@
 
 
 
-
-<!--パーシャルで設定 回答フォーム--------------------------------------------->
+<!--パーシャルで設定 回答フォーム-------------------->
 <!--namespaceを使用しているためか、パーシャルがうまくいかない-->
 <%#= render partial: 'board_comments/form', local: {board: @board, new_comment: @new_comment} %>
     <div class="comment-form">
         <h4>コメントを書き込む</h4>
     </div>
     <div class="comment-form">
-      <!--namespaceを使用する場合は、先頭に指定してあげる必要がある-->
-      <%#= form_for([:public, @board, @new_comment], local: true) do |f| %>
       <%= form_with model: [:public, @board, @new_comment], local: true do |f| %>
 
          <%#= f.hidden_field :board_id %>
         <div class="form-group">
           <%= f.text_area :comment, class: 'form-control', rows: 6 %>
         </div>
-
 
         <div class="actions">
           <%= f.submit '送信する', class: 'btn btn-outline-info' %>
