--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -1,27 +1,25 @@
 <div class="row">
 	<div class="col-md-5">
 		<div class="form-set">
-			<h4>今週のTo do</h4>
-			<%= render 'public/todolists/index', todolists: @todolists %>
+			<h4>今週のタスク</h4>
+			<%= render 'public/todolists/index', todolists: @week_todolists %>
 		</div>
 		<div class="form-set">
-			<h4>今月のTo do</h4>
-			<%= render 'public/todolists/index', todolists: @todolists, todolist: @todolist %>
+			<h4>今月のタスク</h4>
+			<%= render 'public/todolists/index', todolists: @month_todolists %>
 		</div>
 	</div>
 
 
 
-	<!--ラジオボタンが１の場合==本日のリスト一覧-->
 	<div class="col-md-7">
-
 		<div class="form-set">
 			<h3>Todo リスト</h3>
 			<div class="text-right">
 				<%= link_to 'リセット(マイペ)', public_user_path(current_user.id), class: 'btn btn-outline-primary', style: 'border-radius:50%' %>
 			</div>
 
-			<%= form_with(model: @finish_list, url: public_todolists_complete_path, local: true) do |f| %>
+			<%= form_with(model: @completed_list, url: public_todolists_complete_path, local: true) do |f| %>
 			<table class="table-hover table-responsive">
 				<thead>
 					<th colspan="3">本日のリスト一覧</th>
@@ -31,12 +29,15 @@
 					<th></th>
 				</thead>
 				<tbody>
-					<% @todolists.each_with_index do |todolist, i| %>
+					<% @today_todolists.each_with_index do |todolist, i| %>
 					<tr>
 						<th><%= "#{i + 1}: " %></th>
 						<td><%= todolist.content %></td>
 						<!--check_box-->
-						<td style="width:13%"><%= f.check_box :content %></td>
+						<td style="width:13%">
+							<%= f.check_box :content %>
+							<%#= f.check_box :content, "内容", {include_hidden: false} %>
+						</td>
 						<td>
 							<%= link_to edit_public_todolist_path(todolist), class: 'btn btn-outline-success', style: 'border-radius: 30%' do %>
 								<i class="fas fa-cogs"></i>
@@ -46,6 +47,7 @@
 					<% end %>
 				</tbody>
 			</table>
+
 			<%= f.submit '完了報告', class: 'btn btn-outline-success' %>
 			<% end %>
 		</div>
