--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -16,7 +16,7 @@
 		<div class="form-set">
 			<h3>Todo リスト</h3>
 			<div class="text-right">
-				<%= link_to 'リセット(マイペ)', public_user_path(current_user.id), class: 'btn btn-outline-primary', style: 'border-radius:50%' %>
+				<%= link_to 'リセット', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-danger', style: 'border-radius:50%' %>
 			</div>
 
 			<%= form_with(model: @completed_list, url: public_todolists_complete_path, local: true) do |f| %>
