--- a/app/views/public/todolists/_form.html.erb
+++ b/app/views/public/todolists/_form.html.erb
@@ -6,15 +6,15 @@
 			<%= f.text_field :content, class: 'form-control' %>
 		</div>
 		<div class="form-group">
-			<%= f.radio_button :time_category, :today, {value: 0, style: 'display: inline-block;'} %>
+			<%= f.radio_button :time_category, :today, {value: "today", style: 'display: inline-block;'} %>
 			<%= f.label :time_category_today, "本日", class: 'time_category' %>
 
 
-			<%= f.radio_button :time_category, :week, { value: 1, style: 'display: inline-block;'} %>
+			<%= f.radio_button :time_category, :week, { value: "week", style: 'display: inline-block;'} %>
 			<%= f.label :time_category_week, "今週", class: 'time_category' %>
 
 
-			<%= f.radio_button :time_category, :month, { value: 2, style: 'display: inline-block;'} %>
+			<%= f.radio_button :time_category, :month, { value: "month", style: 'display: inline-block;'} %>
 			<%= f.label :time_category_month, "今月", class: 'time_category' %>
 		</div>
 		<div class="action">
