--- a/app/views/public/boards/show.html.erb
+++ b/app/views/public/boards/show.html.erb
@@ -19,9 +19,26 @@
       <% end %>
     </div>
       <div class="text-right">
-         <!--お気に入りボタン-->
-        <i class="far fa-surprise fa-2x"></i>
-        <span class="balloon3-left">34</span>
+
+        <!--掲示板お気に入りボタン---------------------------->
+        <% if @board.board_liked_by?(current_user) %>
+        <li>気になる:
+          <%= link_to public_board_board_likes_path(@board), method: :delete do %>
+          <i class="far fa-surprise fa-2x"></i>
+          <span class="balloon3-left"><%= @board.board_likes.count %></span>
+          <% end %>
+        </li>
+        <% else %>
+        <li>気になる:
+          <%= link_to public_board_board_likes_path(@board), method: :post do %>
+          <i class="far fa-surprise fa-2x"></i>
+          <span class="balloon3-left"><%= @board.board_likes.count %></span>
+          <% end %>
+        </li>
+        <% end %>
+        <!--掲示板お気に入りボタン---------------------------->
+
+
       </div>
   </div>
   <div class="board-body">
