[add]follows/followers.count/restriction

--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -33,23 +33,44 @@
 				</tr>
 				<tr>
 					<th>フォローリスト</th>
-					<td></td>
+					<td>
+					<!--フォロー、フォロワーの数が０だった場合、リンク先に飛べないように設定-->
+					<% if @user.followings.count != 0 %>
+						<%= link_to @user.followings.count, follows_public_user_path %>
+					<% else %>
+						<%= @user.followings.count %>
+					<% end %>
+					</td>
 				</tr>
 				<tr>
-					<th>フォロワーリス</th>
-					<td></td>
+					<th>フォロワーリスト</th>
+					<td>
+					<% if @user.followers.count != 0 %>
+						<%= link_to @user.followers.count, followers_public_user_path %>
+					<% else %>
+						<%= @user.followers.count %>
+					<% end %>
+					</td>
 				</tr>
 				<!--追加-->
 				<tr>
 					<% if @user != current_user %>
 						<% if @user.followed_by?(current_user) %>
 						<th>フォロー済: </th>
-						<td><%= link_to public_user_relationship_path(@user.id), method: :delete do %><i class="far fa-thumbs-up fa-lg"></i><% end %></td>
+						<td><%= link_to public_user_relationship_path(@user.id), method: :delete do %>
+							  <i class="far fa-thumbs-up fa-lg">
+							  	<%= @user.followings.count %>
+							  </i>
+							<% end %>
+						</td>
 					<% else %>
 						<th>フォローする: </th>
 						<td><%= link_to public_user_relationships_path(@user.id), method: :post do %>
-						  	<i class="far fa-thumbs-up fa-lg"></i></td>
+						  	  <i class="far fa-thumbs-up fa-lg">
+						  	  	<%= @user.followers.count %>
+						  	  </i>
 						  	<% end %>
+						</td>
 						<% end %>
 					<% end %>
 				</tr>
