--- a/app/views/manage/tags/_form.html.erb
+++ b/app/views/manage/tags/_form.html.erb
@@ -13,7 +13,7 @@
 
 	<div class="actions">
 		<div style="text-align:center;">
-			<%= f.submit '変更する', class: 'btn btn-outline-primary' %>
+			<%= f.submit '保存する', class: 'btn btn-outline-primary' %>
 		</div>
 	</div>
 <% end %>
