--- a/app/views/manage/users/show.html.erb
+++ b/app/views/manage/users/show.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
 	<div class="col-md-6 offset-md-6">
 		<div class="float-right">
-			<%= link_to '戻る', :back, class: 'btn btn-outline-dark' %>
+			<%= link_to '戻る', manage_users_path, class: 'btn btn-outline-dark' %>
 		</div>
 
 	<h3>会員情報</h3>
@@ -33,7 +33,7 @@
 				</tr>
 				<tr>
 					<th>ユーザーページ</th>
-					<td><%= link_to '確認する', '#', class: 'btn btn-default btn-sm btn-outline-primary' %></td>
+					<td><%= link_to '確認する', public_user_path(@user), class: 'btn btn-default btn-sm btn-outline-primary' %></td>
 				</tr>
 				<tr>
 					<th>会員ステータス</th>
