--- a/app/views/public/boards/show.html.erb
+++ b/app/views/public/boards/show.html.erb
@@ -19,23 +19,12 @@
       <% end %>
     </div>
       <div class="text-right">
+        <!--掲示板お気に入りボタン   Ajax化---------------------------->
 
-        <!--掲示板お気に入りボタン---------------------------->
-        <% if @board.board_liked_by?(current_user) %>
-        <li>気になる:
-          <%= link_to public_board_board_likes_path(@board), method: :delete do %>
-          <i class="far fa-surprise fa-2x"></i>
-          <span class="balloon3-left"><%= @board.board_likes.count %></span>
-          <% end %>
-        </li>
-        <% else %>
-        <li>気になる:
-          <%= link_to public_board_board_likes_path(@board), method: :post do %>
-          <i class="far fa-surprise fa-2x"></i>
-          <span class="balloon3-left"><%= @board.board_likes.count %></span>
-          <% end %>
-        </li>
-        <% end %>
+         <div id="likes_buttons_<%= @board.id %>">
+           <%= render partial: 'public/board_likes/like', locals: { board: @board} %>
+         </div>
+
         <!--掲示板お気に入りボタン---------------------------->
 
 
