--- a/app/views/public/boards/show.html.erb
+++ b/app/views/public/boards/show.html.erb
@@ -19,14 +19,11 @@
       <% end %>
     </div>
       <div class="text-right">
-        <!--掲示板お気に入りボタン   Ajax化---------------------------->
-
+        <!--掲示板お気に入りボタンAjax化---------------------------->
          <div id="likes_buttons_<%= @board.id %>">
            <%= render partial: 'public/board_likes/like', locals: { board: @board} %>
          </div>
-
         <!--掲示板お気に入りボタン---------------------------->
-
 
       </div>
   </div>
@@ -45,8 +42,6 @@
   </div>
   <!--左ボーダー -->
 </div>
-
-
 
 
 <div class="comments">
@@ -68,12 +63,15 @@
                 <% end %>
             </span>
 
-          <%= link_to '削除', public_board_board_comment_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
-          <%= link_to '編集', edit_public_board_board_comment_path(comment.id), class: 'btn btn-outline-success' %>
+            <%= link_to '削除', public_board_board_comment_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
+            <%= link_to '編集', edit_public_board_board_comment_path(comment.id), class: 'btn btn-outline-success' %>
 
-            <!--コメントに対するいいねボタン-->
-            <%= render 'public/board_comments/comment_likes', comment: comment %>
+            <!--コメントに対するいいねボタン Ajax化-->
+            <div id="comment_likes_buttons_<%= comment.id %>">
 
+              <%= render partial: 'public/comment_likes/like', locals: { comment: comment} %>
+            </div>
+            <!--コメントに対するいいねボタン--------->
           </div>
         </div>
       <% end %>
