--- a/app/views/public/todolists/complete.html.erb
+++ b/app/views/public/todolists/complete.html.erb
@@ -1,1 +1,10 @@
+
 test
+
+<%# @finished_lists.each do |list| %>
+
+<%#= @finished_list.id %>
+<%#= @finished_list.list.content %>
+<%#= @finished_list.time_category %>
+
+<%# end %>
