--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -13,7 +13,7 @@ body {
    margin: 0;
    padding: 0;
    font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
-   background-color: rgb(234, 237, 242);/*#ffffff;組み合わせること*/
+   background-color: #ffffff;/*ベースは白色*/
 }
 
 
@@ -30,7 +30,7 @@ a {
 .header {
 	width: 100%;
 	padding: 20px 4% 10px;/*header内側の余白*/
-	background-color: #009966;/*背景色*/
+	background-color: #009966;/*背景色 #009966*/
 	top: 0;
 	display: flex;/*header直下の子要素のレイアウト*/
 	align-items: center;/*縦方向の中心*/
