--- a/app/views/manage/todolists/index.html.erb
+++ b/app/views/manage/todolists/index.html.erb
@@ -1,13 +1,13 @@
 <div class='row'>
 	<div class='col-md-3'>
-		<h3>新規登録画面</h3>
+		<h3>ラベル登録画面</h3>
 
 		<div class="form-set">
 			<div class="tag-heading">
 				<h5>ラベル追加</h5>
 			</div>
 			<div class="tag-body">
-				<%= render 'form', todolist: @todolist, obj: @todolist %>
+				<%= render 'manage/todolists/form', todolist: @todolist, obj: @todolist %>
 			</div>
 		</div>
 	</div>
@@ -16,30 +16,29 @@
 	<div class="col-md-9">
 		<h3>ラベル一覧</h3>
 		<div class="form-set">
-			<%#= render 'index', tags: @tags, obj: @tag %>
 			<table class="table table-hover table-responsive">
 				<thead class="thead">
-					<th>ラベルID</th>
+					<th>ID</th>
 					<th>ラベル名</th>
 					<th>作成日時</th>
 					<th>ステータス</th>
 					<th></th>
 				</thead>
 				<tbody>
-					<% @labels.each do |label| %>
+					<% @todolists.each do |todolist| %>
 					<tr>
-						<td><%= label.id %></td>
-						<td><%= link_to label.label, edit_manage_todolist_path(label) %></td>
-						<td><%= l label.created_at %></td>
+						<td><%= todolist.id %></td>
+						<td><%#= todolist.label, edit_manage_todolist_path(todolist) %></td>
+						<td><%= l todolist.created_at %></td>
 						<!--boolean型の日本語化、これでもok-->
-						<td><%= tag.finished ? '無効' : '有効' %></td>
-						<td><%#= link_to "変更", edit_manage_tag_path(tag), class: 'btn btn-outline-info', style: "border-radius: 50%" %></td>
+						<td><%#= todolist.done ? '無効' : '有効' %></td>
+						<td><%= link_to "変更", edit_manage_todolist_path(todolist), class: 'btn btn-outline-success', style: "border-radius: 50%" %></td>
 					</tr>
 					<% end %>
 				</tbody>
 			</table>
 
-			<%#= paginate @tags %>
+			<%= paginate @todolists %>
 
 		</div>
 	</div>
