--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -1,42 +1,64 @@
 <div class="row">
+<!--
 	<div class="col-md-5">
 		<div class="form-set">
 			<h4>今週のTo doリスト</h4>
-			<%= render 'public/todolists/index', todolists: @week_todolists %>
+			<%#= render 'public/todolists/index', todolists: @week_todolists %>
 		</div>
 		<div class="form-set">
 			<h4>今月のTo doリスト</h4>
-			<%= render 'public/todolists/index', todolists: @month_todolists %>
+			<%#= render 'public/todolists/index', todolists: @month_todolists %>
 		</div>
 	</div>
+ -->
 
+		<!--todolistフォーム-->
+	<div class="col-md-5">
+		<div class="form-set">
+			<div class="todolt-form">
+				<h4>To doリスト作成</h4>
+				<%= render 'public/todolists/form', todolist: @todolist, obj: @todolist %>
 
+			</div>
+		</div>
+	</div>
 
 	<div class="col-md-7">
 		<div class="form-set">
 			<h3>本日のTo do リスト</h3>
+		<% if @today_todolists.exists? %>
 
-			<%= form_with(model: @completed_list, url: public_todolists_complete_path, local: true) do |f| %>
-			<table class="table-hover table-responsive">
+			<table class="table table-hover table-responsive">
 				<thead>
-					<th colspan="3">リスト一覧</th>
-					<th></th>
-					<th></th>
-					<th></th>
-					<th></th>
+					<th>No.</th>
+					<th>リスト名</th>
+					<th>種別</th>
+					<th>テスト用</th>
+					<th>チェック</th>
+					<th>編集</th>
 				</thead>
 				<tbody>
-					<% @today_todolists.each_with_index do |todolist, i| %>
+				<% @today_todolists.each_with_index do |todolist, i| %>
+					<!--todoリスト未達成のものだけ表示する-->
+					<% if todolist.done == false %>
 					<tr>
 						<th><%= "#{i + 1}: " %></th>
 						<td><%= todolist.content %></td>
-						<!--check_box-->
-						<td style="width:13%">
-							<%= f.hidden_field :content, content: 'todolist[#{i}[name]' %>
-							<%= f.check_box :content, name: 'todolist[#{i}][content]' %>
-							<%#= f.check_box :content, "内容", {include_hidden: false} %>
-		<%#= f.text_field :name, name: "item[#{index}][name]" %>
-      <%#= f.check_box :delete_flag, name: "item[#{index}][delete_flag]" %>
+						<td>
+							<span class="badge badge-secondary"><%= todolist.label %></span>
+						</td>
+						<!--テスト-->
+						<td><%= todolist.done %></td>
+						<td>
+							<%= form_with model: [:public, todolist], local: true do |f| %>
+
+								<%= f.hidden_field :label, :value => todolist.label %>
+								<%= f.hidden_field :done, :value => true %><!--完了:trueを送りたい-->
+								<%= f.hidden_field :time_category, :value => todolist.time_category %>
+								<%= f.hidden_field :content, :value => todolist.content %>
+
+								<%= f.submit '達成', class: 'btn btn-outline-info btn-sm' %>
+							<% end %>
 						</td>
 						<td>
 							<%= link_to edit_public_todolist_path(todolist), class: 'btn btn-outline-success', style: 'border-radius: 30%' do %>
@@ -45,26 +67,26 @@
 						</td>
 					</tr>
 					<% end %>
+
+				<% end %>
 				</tbody>
+
 			</table>
+			<span class="text-right">
+				<p><%= link_to '完了報告', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-info' %></p>
+			</span>
+			<span class="text-right">
+				<p><%= link_to 'リセット', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-danger', style: 'border-radius:50%' %></p>
+			</span>
 
-			<%= f.submit '完了報告', class: 'btn btn-outline-success' %>
-			<% end %>
-
+		<% else %>
+		<!--todoリストをまだ一つも作成していない場合-->
+			Todoリストをまだ設定していませんか？<br />
+			To doリスト作成欄からTo doリストを作成してみましょう！
+		<% end %>
 
 		</div>
 
-		<!--todolistフォーム-->
-		<div class="form-set">
-			<div class="todolt-form">
-				<h4>To doリスト作成</h4>
-				<%= render 'public/todolists/form', todolist: @todolist, obj: @todolist %>
-
-				<div class="text-right">
-					<%= link_to 'リセット', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-danger', style: 'border-radius:50%' %>
-				</div>
-			</div>
-		</div>
 	</div>
 
 </div>
