--- a/app/views/shared/_admin_header.html.erb
+++ b/app/views/shared/_admin_header.html.erb
@@ -10,7 +10,8 @@
       </li>
 
         <li><%= link_to '  会員一覧', manage_users_path, class: 'glyphicon glyphicon-log-in' %></li>
-          <li><%= link_to '  タグ一覧', manage_tags_path, class: 'glyphicon glyphicon-log-in' %></li>
+        <li><%= link_to '  タグ一覧', manage_tags_path, class: 'glyphicon glyphicon-log-in' %></li>
+        <li><%= link_to 'To doリスト設定', manage_todolists_path, class: 'glyphicon glyphicon-log-in' %></li>
         <li><%#= link_to '  使い方ガイド修正フォーム', home_about_path, class: 'glyphicon glyphicon-log-in' %></li>
         <li><%= link_to '  掲示板一覧', manage_boards_path, class: 'glyphicon glyphicon-log-in' %></li>
 
