--- a/app/views/public/todolists/edit.html.erb
+++ b/app/views/public/todolists/edit.html.erb
@@ -10,5 +10,36 @@
 </div>
 
 
-<%= link_to '削除する', public_todolist_path(@todolist),method: :delete, data: { confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
 <%= link_to '戻る', public_user_path(current_user), class: 'btn btn-dark' %>
+
+
+
+
+
+<button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#deleteModal">
+    削除する
+</button>
+
+<!-- モーダルダイアログ -->
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="demoModalTitle">確認</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                To doリストの内容を削除しますか？
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+                <%= link_to '削除する', public_todolist_path(@todolist),method: :delete, class: 'btn btn-outline-danger' %>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
