--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -26,7 +26,33 @@
 	<div class="col-md-7">
 		<div class="form-set">
 			<h3>本日のTo do リスト</h3>
-		<% if @today_todolists.exists? %>
+			<% if @today_todolists.exists? %>
+			<div class="text-right">
+				<button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#demoNormalModal">
+				    リセット
+				</button>
+
+				<!-- モーダルダイアログ -->
+				<div class="modal fade" id="demoNormalModal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+				    <div class="modal-dialog" role="document">
+				        <div class="modal-content">
+				            <div class="modal-header">
+				                <h5 class="modal-title" id="demoModalTitle">確認</h5>
+				                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				                    <span aria-hidden="true">&times;</span>
+				                </button>
+				            </div>
+				            <div class="modal-body">
+				                リスト内容が全て失われます。よろしいですか？
+				            </div>
+				            <div class="modal-footer">
+				                <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+				                <%= link_to 'OK', public_todolists_delete_path, method: :delete ,class: 'btn btn-danger' %>
+				            </div>
+				        </div>
+				    </div>
+				</div>
+			</div>
 
 			<table class="table table-hover table-responsive">
 				<thead>
@@ -61,6 +87,8 @@
 							<% end %>
 						</td>
 						<td>
+
+
 							<%= link_to edit_public_todolist_path(todolist), class: 'btn btn-outline-success', style: 'border-radius: 30%' do %>
 								<i class="fas fa-cogs"></i>
 							<% end %>
@@ -75,9 +103,8 @@
 			<span class="text-right">
 				<p><%= link_to '完了報告', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-info' %></p>
 			</span>
-			<span class="text-right">
-				<p><%= link_to 'リセット', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-danger', style: 'border-radius:50%' %></p>
-			</span>
+
+
 
 		<% else %>
 		<!--todoリストをまだ一つも作成していない場合-->
