--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -16,19 +16,20 @@
 				</tr>
 				<tr>
 					<th>自己紹介</th>
-					<td></td>
+					<td><%= @user.introduction %></td>
 				</tr>
 				<tr>
+					<!--今までの合計のリスト数-->
 					<th>達成したリスト数</th>
-					<td></td>
+					<td><%= @user.todolists.count %></td>
 				</tr>
 				<tr>
-					<th>お気に入り投稿数</th>
+					<th>お気に入り投稿一覧</th>
 					<td></td>
 				</tr>
 				<tr>
 					<th>投稿数</th>
-					<td></td>
+					<td><%= @user.boards.count %></td>
 				</tr>
 				<tr>
 					<th>フォローリスト</th>
