--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -30,7 +30,7 @@ a {
 .header {
 	width: 100%;
 	padding: 20px 4% 10px;/*header内側の余白*/
-	background-color: #009966;/*背景色 #009966*/
+	background-color: #ffffff;/*背景色 #009966*/
 	top: 0;
 	display: flex;/*header直下の子要素のレイアウト*/
 	align-items: center;/*縦方向の中心*/
