--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -54,70 +54,70 @@
 				    </div>
 				</div>
 			</div>
+			<% end %>
 
-		<% if @today_todolists.exists? %>
-
-
-			<table class="table table-hover table-responsive">
-				<thead>
-					<th>No.</th>
-					<th>リスト名</th>
-					<th>種別</th>
-					<th>テスト用</th>
-					<th>チェック</th>
-					<th>編集</th>
-				</thead>
-				<tbody>
-				<% @today_todolists.each_with_index do |todolist, i| %>
-					<!--todoリスト未達成のものだけ表示する-->
-					<% if todolist.done == false %>
-					<tr>
-						<th><%= "#{i + 1}: " %></th>
-						<td><%= todolist.content %></td>
-						<td>
-							<span class="badge badge-secondary"><%= todolist.label %></span>
-						</td>
-						<!--テスト-->
-						<td><%= todolist.done %></td>
-						<td>
-							<%= form_with model: [:public, todolist], local: true do |f| %>
-
-								<%= f.hidden_field :label, :value => todolist.label %>
-								<%= f.hidden_field :done, :value => true %><!--完了:trueを送りたい-->
-								<%= f.hidden_field :time_category, :value => todolist.time_category %>
-								<%= f.hidden_field :content, :value => todolist.content %>
-
-								<%= f.submit '達成', class: 'btn btn-outline-info btn-sm' %>
-							<% end %>
-						</td>
-						<td>
+			<% if @today_todolists.exists? %>
 
 
-							<%= link_to edit_public_todolist_path(todolist), class: 'btn btn-outline-success', style: 'border-radius: 30%' do %>
-								<i class="fas fa-cogs"></i>
-							<% end %>
-						</td>
-					</tr>
+				<table class="table table-hover table-responsive">
+					<thead>
+						<th>No.</th>
+						<th>リスト名</th>
+						<th>種別</th>
+						<th>テスト用</th>
+						<th>チェック</th>
+						<th>編集</th>
+					</thead>
+					<tbody>
+					<% @today_todolists.each_with_index do |todolist, i| %>
+						<!--todoリスト未達成のものだけ表示する-->
+						<% if todolist.done == false %>
+						<tr>
+							<th><%= "#{i + 1}: " %></th>
+							<td><%= todolist.content.truncate(30) %></td>
+							<td>
+								<span class="badge badge-secondary"><%= todolist.label %></span>
+							</td>
+							<!--テスト-->
+							<td><%= todolist.done %></td>
+							<td>
+								<%= form_with model: [:public, todolist], local: true do |f| %>
+
+									<%= f.hidden_field :label, :value => todolist.label %>
+									<%= f.hidden_field :done, :value => true %><!--完了:trueを送りたい-->
+									<%= f.hidden_field :time_category, :value => todolist.time_category %>
+									<%= f.hidden_field :content, :value => todolist.content %>
+
+									<%= f.submit '達成', class: 'btn btn-outline-info btn-sm' %>
+								<% end %>
+							</td>
+							<td>
+
+
+								<%= link_to edit_public_todolist_path(todolist), class: 'btn btn-outline-success', style: 'border-radius: 30%' do %>
+									<i class="fas fa-cogs"></i>
+								<% end %>
+							</td>
+						</tr>
+						<% end %>
+
 					<% end %>
+					</tbody>
 
-				<% end %>
-				</tbody>
+				</table>
+				<span class="text-right">
+					<p><%= link_to '完了報告', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-info' %></p>
+				</span>
 
-			</table>
-			<span class="text-right">
-				<p><%= link_to '完了報告', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-info' %></p>
-			</span>
+				<span class="text-right">
+					<p><%= link_to 'リセット', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-danger', style: 'border-radius:50%' %></p>
+				</span>
 
-			<span class="text-right">
-				<p><%= link_to 'リセット', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-danger', style: 'border-radius:50%' %></p>
-			</span>
-
-		<% else %>
-		<!--todoリストをまだ一つも作成していない場合-->
-			Todoリストをまだ設定していませんか？<br />
-			To doリスト作成欄からTo doリストを作成してみましょう！
-		<% end %>
-
+			<% else %>
+			<!--todoリストをまだ一つも作成していない場合-->
+				Todoリストをまだ設定していませんか？<br />
+				To doリスト作成欄からTo doリストを作成してみましょう！
+			<% end %>
 
 
 		</div>
