--- a/app/views/manage/tags/_form.html.erb
+++ b/app/views/manage/tags/_form.html.erb
@@ -1,20 +1,36 @@
-<!--form_withのnamespaceの書き方-->
-<%= form_with model: [:manage, tag], local: true do |f| %>
-    <%= render partial: 'shared/error_messages', locals: { obj: tag} %>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+    	<%= form_with model: [:manage, tag], local: true do |f| %>
+			<%= render partial: 'shared/error_messages', locals: { obj: tag} %>
+	    	<div class="modal-header">
+	        	<h5 class="modal-title" id="exampleModalLabel">タグ追加</h5>
+	        	<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          		<span aria-hidden="true">&times;</span>
+	        	</button>
+	      	</div>
+	      	<div class="modal-body">
+	      		<div class="text-left">
 
-	<div class="form-group">
-		<%= f.label 'タグ名' %>
-		<%= f.text_field :name, class: 'form-control' %>
-	</div>
-	<div class="form-group">
-		<span><%= f.radio_button :is_void, :"false" %>有効</span>
-		<span><%= f.radio_button :is_void, :"true" %>無効</span>
-	</div>
+				<div class="form-group">
+					<%= f.label 'タグ名', class: "form-control-label" %>
+					<%= f.text_field :name, class: 'form-control' %>
+				</div>
+				<div class="form-group">
+					<span><%= f.radio_button :is_void, :"false" %>有効</span>
+					<span><%= f.radio_button :is_void, :"true" %>無効</span>
+				</div>
 
-	<div class="actions">
-		<div style="text-align:center;">
-			<%= f.submit '保存する', class: 'btn btn-outline-primary' %>
-		</div>
-	</div>
-<% end %>
+			</div>
+			</div>
 
+
+	     	<div class="modal-footer">
+		        <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+		        <button type="button" class="btn"><%= f.submit '保存する', class: 'btn btn-outline-primary' %></button>
+	     	</div>
+	      <% end %>
+    </div>
+  </div>
+</div>
