--- a/app/views/manage/tags/edit.html.erb
+++ b/app/views/manage/tags/edit.html.erb
@@ -1,40 +1,35 @@
 <!--ステータスを無効にしたら、掲示板追加の時に、タグ選択に現れない-->
-
 <div class='row'>
-	<div class='col-md-3'>
-		<h3>タグ詳細</h3>
+	<div class="col-md-8 offset-md-1">
+		<div class="float-right">
+			<%= link_to '一覧画面に戻る', manage_tags_path, class: 'btn btn-secondary' %>
+		</div>
+		<h3>編集画面</h3>
 
 		<div class="form-set">
+			<div class="tag-heading">
+				<h5>タグ編集</h5>
+			</div>
 			<div class="tag-body">
-				<p style="font-size:20px;">
-				  <span class="label label-default">
-						タグ名: <%= @tag.name %>
-					　　</span><hr /></p>
-				<p style="font-size:20px;">
-				  <span class="label label-default">
-							ステータス: <%= @tag.is_void ? '無効' : '有効' %>
-						</span><hr /></p>
-				<%= link_to '削除する', manage_tag_path(@tag), method: :delete, data: { confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
+
+				<%= form_with model: [:manage, @tag], local: true do |f| %>
+					<%= render partial: 'shared/error_messages', locals: { obj: @tag} %>
+
+				<div class="form-group">
+					<%= f.label 'タグ名', class: "form-control-label" %>
+					<%= f.text_field :name, class: 'form-control' %>
+				</div>
+				<div class="form-group">
+					<span><%= f.radio_button :is_void, :"false" %>有効</span>
+					<span><%= f.radio_button :is_void, :"true" %>無効</span>
+				</div>
+
+				<div class="actions">
+					<%= f.submit '保存する', class: 'btn btn-outline-primary' %>
+				</div>
+				<% end %>
 			</div>
 		</div>
 	</div>
-
-			<div class="col-md-8 offset-md-1">
-				<div class="float-right">
-					<%= link_to '一覧画面に戻る', manage_tags_path, class: 'btn btn-outline-dark' %>
-				</div>
-
-				<h3>編集画面</h3>
-
-				<div class="form-set">
-					<div class="tag-heading">
-						<h5>タグ編集</h5>
-					</div>
-
-					<div class="tag-body">
-						<%= render 'form', tag: @tag, obj: @tag %>
-					</div>
-				</div>
-			</div>
-		</div>
+</div>
 
