--- a/app/views/manage/tags/index.html.erb
+++ b/app/views/manage/tags/index.html.erb
@@ -1,49 +1,64 @@
-<div class='row'>
-	<div class='col-md-3'>
-		<h3>新規登録画面</h3>
-
-		<div class="form-set">
-			<div class="tag-heading">
-				<h5>タグ追加</h5>
-			</div>
-			<div class="tag-body">
-				<%= render 'form', tag: @tag, obj: @tag %>
-			</div>
-		</div>
+<div class="row">
+	<div class="col-md-2">
+		会員検索
 	</div>
+	<div class="col-md-10 offset-md-2">
+		<div class="text-right">
+			<%= form_tag manage_tags_path, method: :get, html: {class: 'tags_searchForm'} do %>
+				<!--= collection_select オブジェクト名, プロパティ名, オブジェクトの配列, value属性にセットしたいオブジェクトの属性, 表示に使用するオブジェクトの属性-->
+			      <%= select_tag :tag_id,
+			                     options_from_collection_for_select(Tag.select(:is_void), :id, :is_void, params[:is_void]),
+			                     {
+			                       prompt: 'タグで絞り込み',
+			                       class: 'form-control boards__select',
+			                       onchange: 'submit(this.form);'
+			                     } %>
+			<% end %>
+		<div class="tag-form">
+			<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
+				タグ新規作成 +
+			</button>
+			<%= render 'form', tag: @tag, obj: @tag %>
+		</div>
 
+		</div>
 
-	<div class="col-md-9">
-		<h3>タグ一覧</h3>
-		<div class="form-set">
-			<%#= render 'index', tags: @tags, obj: @tag %>
-			<table class="table table-hover table-responsive">
-				<thead class="thead">
-					<th>タグID</th>
-					<th>タグ名</th>
-					<th>作成日時</th>
-					<th>ステータス</th>
-					<th></th>
-				</thead>
-				<tbody>
-					<% @tags.each do |tag| %>
-					<tr>
-						<td><%= tag.id %></td>
-						<td><%= link_to tag.name, edit_manage_tag_path(tag) %></td>
-						<td><%= l tag.created_at %></td>
-						<!--boolean型の日本語化、これでもok-->
-						<td><%= tag.is_void ? '無効' : '有効' %></td>
-						<td><%= link_to "変更", edit_manage_tag_path(tag), class: 'btn btn-outline-info', style: "border-radius: 50%" %></td>
-					</tr>
-					<% end %>
-				</tbody>
-			</table>
+		<table class="table table-hover">
+			<thead class="thead">
+				<th>タグID</th>
+				<th>タグ名</th>
+				<th>作成日時</th>
+				<th>ステータス</th>
+				<th></th>
+			</thead>
+			<tbody>
+				<% @tags.each do |tag| %>
+				<tr>
+					<td><%= tag.id %></td>
+					<td><%= link_to tag.name, edit_manage_tag_path(tag) %></td>
+					<td><%= l tag.created_at %></td>
+					<!--boolean型の日本語化、これでもok-->
+					<td>
+						<% if tag.is_void == false %>
+							<span class='badge badge-primary'><%= tag.is_void ? '無効' : '有効' %></span>
+						<% else %>
+							<span class='badge badge-danger'><%= tag.is_void ? '無効' : '有効' %></span>
+						<% end %>
+					</td>
+					<td>
+						<%= link_to edit_manage_tag_path(tag), class: 'btn btn-outline-success' do %>
+						  変更<i class="fas fa-cogs"><%= render 'form', tag: @tag, obj: @tag %></i>
+						<% end %>
+					</td>
+				</tr>
+				<% end %>
+			</tbody>
+		</table>
 
 			<%= paginate @tags %>
-
-		</div>
 	</div>
-
 </div>
+
+
 
 
