--- a/app/views/manage/users/index.html.erb
+++ b/app/views/manage/users/index.html.erb
@@ -1,6 +1,9 @@
 <div class="row">
-	<div class="form-set">
-	<table class="table table-hove table-responsive">
+	<div class="col-md-2">
+		会員検索
+	</div>
+	<div class="col-md-10 offset-md-2">
+	<table class="table table-hover table-responsive">
 		<thead class="thead">
 			<tr>
 				<th>会員NO.</th>
@@ -23,18 +26,16 @@
 
 				<!--ステータスの変更をできるようにすること-->
 				<td><%if user.is_deleted == false %>
-                      <span>有効会員</span>
+                      <span class="badge badge-pill badge-primary">有効会員</span>
               		<% else %>
-                  	  <span>退会済み</span>
+                  	  <span class="badge badge-pill badge-danger">退会済み</span>
               		<% end %>
               	</td>
-              	<td><%= link_to '詳細', manage_user_path(user), class: 'btn btn-outline-info' %></td>
+              	<td><%= link_to '詳細', manage_user_path(user), class: 'btn btn-outline-primary' %></td>
 			</tr>
 			<% end %>
 		</tbody>
 	</table>
-
-	<!--ページャ実装-->
 	<%= paginate @users %>
 	</div>
 </div>
