--- a/app/views/manage/users/show.html.erb
+++ b/app/views/manage/users/show.html.erb
@@ -1,58 +1,54 @@
-<!--ユーザーのマイページにも飛べるようにする-->
-<!--サイドバーから管理者のみ設定できる項目を入れる-->
 <div class="row">
-	<div class="col-md-6 offset-md-6">
+	<div class="col-md-8 offset-1">
 		<div class="float-right">
-			<%= link_to '戻る', manage_users_path, class: 'btn btn-outline-dark' %>
+			<%= link_to '戻る', manage_users_path, class: 'btn btn-dark' %>
 		</div>
 
-	<h3>会員情報</h3>
-	<div class="form-set">
-
-		<table class="table table-hover table-responsive">
+		<table class="table table-bordered table-hover">
+			<thead class="thead">
+				<h3>会員情報</h3>
+			</thead>
 				<tr>
-					<th>ユーザー名</th>
-					<td><%= attachment_image_tag(@user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '60x60') %></td>
+					<th style="width: 30%", class="table-secondary"></th>
+					<td style="width: 70%"><%= attachment_image_tag(@user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '60x60') %></td>
+				</tr>
+				<tr>
+					<th class="table-secondary">ユーザー名</th>
+					<td><%= @user.name %></td>
 				</tr>
 
 				<tr>
-					<th>登録ID</th>
+					<th class="table-secondary">登録ID</th>
 					<td><%= @user.id %></td>
 				</tr>
 				<tr>
-					<th>登録日時</th>
+					<th class="table-secondary">登録日時</th>
 					<td><%= l @user.created_at %></td>
 				</tr>
 				<tr>
-					<th>氏名</th>
-					<td><%= @user.name %></td>
-				</tr>
-				<tr>
-					<th>メールアドレス</th>
+					<th class="table-secondary">メールアドレス</th>
 					<td><%= @user.email %></td>
 				</tr>
 				<tr>
-					<th>ユーザーページ</th>
+					<th class="table-secondary">ユーザーページ</th>
 					<td><%= link_to '確認する', public_user_path(@user), class: 'btn btn-default btn-sm btn-outline-primary' %></td>
 				</tr>
 				<tr>
-					<th>会員ステータス</th>
+					<th class="table-secondary">会員ステータス</th>
 					<td>
 						<% if @user.is_deleted == false %>
-	                      <span>有効会員</span>
+	                      <span class="badge badge-pill badge-primary">有効会員</span>
 	              		<% else %>
-	                  	  <span>退会済み</span>
+	                  	  <span class="badge badge-pill badge-primary">退会済み</span>
 	              		<% end %>
 	 				</td>
 				</tr>
 				<tr>
-					<th></th>
+					<th class="table-secondary"></th>
 					<!--右側に位置させる-->
-					<td><%= link_to '編集する', edit_manage_user_path(@user), class: 'btn btn-lg btn-outline-primary' %></td>
+					<td><%= link_to '編集する', edit_manage_user_path(@user), class: 'btn btn-lg btn-outline-success' %></td>
 				</tr>
-
 		</table>
-	  </div>
 	</div>
 </div>
 
