--- a/app/views/manage/users/index.html.erb
+++ b/app/views/manage/users/index.html.erb
@@ -1,9 +1,19 @@
 <div class="row">
-	<div class="col-md-2">
-		会員検索
+	<div class="col-md-3">
+		<h4>会員検索</h4>
+
+		<div class="form-set">
+		   <%= search_form_for(@search, url: manage_users_path, html: {class: 'form-inline'}) do |f| %>
+			   <%= f.label :name_or_email_cont, '検索はこちらから' %>
+			   <%= f.search_field :name_or_email_cont %>
+			   <div class="actions">
+			   <%= f.submit '検索する', class: 'btn-outline-primary' %>
+			   </div>
+		   <% end %>
+	    </div>
 	</div>
-	<div class="col-md-10 offset-md-2">
-	<table class="table table-hover table-responsive">
+	<div class="col-md-9">
+	<table class="table table-hover">
 		<thead class="thead">
 			<tr>
 				<th>会員NO.</th>
@@ -17,6 +27,7 @@
 		</thead>
 
 		<tbody>
+		<% if @users.any? %>
 			<% @users.each do |user| %>
 			<tr>
 				<td><%= user.id %></td>
@@ -34,8 +45,14 @@
               	<td><%= link_to '詳細', manage_user_path(user), class: 'btn btn-outline-primary' %></td>
 			</tr>
 			<% end %>
+		<% else %>
+			<h2>検索結果は0件です</h2>
+		<% end %>
 		</tbody>
 	</table>
-	<%= paginate @users %>
+
+	<%#= paginate @pagers %>
 	</div>
 </div>
+
+
