--- a/app/views/manage/tags/edit.html.erb
+++ b/app/views/manage/tags/edit.html.erb
@@ -1,6 +1,6 @@
 <!--ステータスを無効にしたら、掲示板追加の時に、タグ選択に現れない-->
 <div class='row'>
-	<div class="col-md-8 offset-md-1">
+	<div class="col-md-6 offset-md-2">
 		<div class="float-right">
 			<%= link_to '一覧画面に戻る', manage_tags_path, class: 'btn btn-secondary' %>
 		</div>
@@ -25,7 +25,7 @@
 				</div>
 
 				<div class="actions">
-					<%= f.submit '保存する', class: 'btn btn-outline-primary' %>
+					<%= f.submit '保存する', class: 'btn btn-outline-primary btn-block' %>
 				</div>
 				<% end %>
 			</div>
