--- a/app/views/manage/tags/index.html.erb
+++ b/app/views/manage/tags/index.html.erb
@@ -1,25 +1,24 @@
 <div class="row">
 	<div class="col-md-2">
-		会員検索
-	</div>
-	<div class="col-md-10 offset-md-2">
-		<div class="text-right">
-			<%= form_tag manage_tags_path, method: :get, html: {class: 'tags_searchForm'} do %>
-				<!--= collection_select オブジェクト名, プロパティ名, オブジェクトの配列, value属性にセットしたいオブジェクトの属性, 表示に使用するオブジェクトの属性-->
-			      <%= select_tag :tag_id,
-			                     options_from_collection_for_select(Tag.select(:is_void), :id, :is_void, params[:is_void]),
+<!-- 		<%#= form_tag manage_tags_path, method: :get, html: {class: 'tags_searchForm'} do %>
+			<--= collection_select オブジェクト名, プロパティ名, オブジェクトの配列, value属性にセットしたいオブジェクトの属性, 表示に使用するオブジェクトの属性-->
+			<%#= select_tag :tag_id,options_from_collection_for_select(Tag.select(:is_void), :id, :is_void, params[:is_void]),
 			                     {
 			                       prompt: 'タグで絞り込み',
 			                       class: 'form-control boards__select',
 			                       onchange: 'submit(this.form);'
 			                     } %>
-			<% end %>
-		<div class="tag-form">
-			<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
-				タグ新規作成 +
-			</button>
-			<%= render 'form', tag: @tag, obj: @tag %>
-		</div>
+		<%# end %>
+	</div>
+	<div class="col-md-10 offset-md-2">
+		<div class="text-right">
+
+			<div class="tag-form">
+				<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
+					タグ新規作成 +
+				</button>
+				<%= render 'form', tag: @tag, obj: @tag %>
+			</div>
 
 		</div>
 
